  mock (the "instance")
* BUGFIX: remove the `__unittest` marker causing traceback truncation
* Removal of deprecated `patch_object`
* `callargs` changed to *always* be a three-tuple of `(name, args, kwargs)`
* Private attributes `_name`, `_methods`, '_children', `_wraps` and `_parent`
  (etc) renamed to reduce likelihood of clash with user attributes.
* Added license file to the distribution


2011/07/25 Version 0.8.0 beta 1
-------------------------------

* `patch.TEST_PREFIX` for controlling how patchers recognise test methods when
  used to decorate a class
* `Mock` call lists (`call_args_list`, `method_calls` & `mock_calls`) are now
  custom list objects that allow membership tests for "sub lists" and have
  an `assert_has_calls` method for unordered call checks
* `callargs` changed to *always* be a three-tuple of `(name, args, kwargs)`
* Addition of `mock_calls` list for *all* calls (including magic methods and
  chained calls)
* Extension of `call` object to support chained calls and `callargs` for better
  comparisons with or without names. `call` object has a `call_list` method for
  chained calls
* Added the public `instance` argument to `create_autospec`
* Support for using Java exceptions as a `side_effect` on Jython
* Improved failure messages for `assert_called_with` and
  `assert_called_once_with`
* Tuples as well as lists can be used to specify allowed methods for `spec` &
  `spec_set` arguments
* BUGFIX: Fixed bug in `patch.multiple` for argument passing when creating
  mocks
* Added license file to the distribution


2011/07/16 Version 0.8.0 alpha 2
--------------------------------

* `patch.multiple` for doing multiple patches in a single call, using keyword
  arguments
* New `new_callable` argument to `patch` and `patch.object` allowing you to
  pass in a class or callable object (instead of `MagicMock`) that will be
  called to replace the object being patched
* Addition of `NonCallableMock` and `NonCallableMagicMock`, mocks without a